# fruit_consultant_hackathon_2025

./: .gitignore  README.md
FruitConsultant/: app.json  package-lock.json  package.json
FruitConsultant/app/: _layout.tsx  index.tsx
FruitConsultant/components/: Camera.tsx  ChatInput.tsx  Message.tsx  Micro.tsx  PickImage.tsx  Sidebar.tsx
FruitConsultant/hooks/: useAudioRecorder.ts  useChatLogic.ts  useSidebar.ts
FruitConsultant/services/: chatService.tsx
chatbot/: main.py  pyproject.toml
chatbot/rag/: prompt.py  rag_chain.py
chatbot/rag/build_db/embeddings/: embed_store.py
chatbot/rag/build_db/loader/: document_loader.py
chatbot/rag/cache/: keyword_retriever.pkl
chatbot/rag/knowledge_base/: durian_overview.md
chatbot/rag/retriever/: basic_retriever.py  hybrid_retriever.py  keyword_retriever.py
chatbot/utils/: config.py  tools.py
chatbot/utils/computer_vision/: cv_config.py
chatbot/utils/speech_to_text/: asr_model.py
code_to_training_model/: durian_whisper.ipynb  durian_yolov11.ipynb
