[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.4",
    "langgraph-checkpoint-mongodb>=0.1.4",
    "langgraph-supervisor>=0.0.29",
    "pymongo>=4.12.1",
    "qdrant-client>=1.15.1",
    "uvicorn>=0.35.0",
    "langchain-qdrant>=0.2.1",
    "langgraph-cli[inmem]>=0.4.3",
    "python-multipart>=0.0.20",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "langchain-openai>=1.0.3",
    "scikit-learn==1.7.2",
    "ultralytics>=8.3.230",
    "transformers>=4.57.1",
]
